--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,5 +1,7 @@
 ---
 import '@styles/global.css';
+import Header from '@components/astro/Header.astro';
+import Footer from '@components/astro/Footer.astro';
 
 interface Props {
   title: string;
@@ -22,7 +24,11 @@ const siteTitle = `${title} | Refine & Deploy`;
     <meta name="description" content={description} />
     <title>{siteTitle}</title>
   </head>
-  <body>
-    <slot />
+  <body class="min-h-screen flex flex-col">
+    <Header />
+    <main class="flex-1">
+      <slot />
+    </main>
+    <Footer />
   </body>
 </html>
