Set iOS status bar to teal (#14b8a6)

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -25,7 +25,7 @@ const siteTitle = `${title} | Refine & Deploy`;
     <title>{siteTitle}</title>
 
     <!-- Theme color for iOS status bar - brand teal -->
-    <meta name="theme-color" content="#4f46e5" />
+    <meta name="theme-color" content="#14b8a6" />
 
     <!-- Blocking theme script - prevents flash of wrong theme -->
     <script is:inline>
