--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -24,8 +24,8 @@ const siteTitle = `${title} | Refine & Deploy`;
     <meta name="description" content={description} />
     <title>{siteTitle}</title>
 
-    <!-- Theme color for iOS status bar - brand teal -->
-    <meta name="theme-color" content="#14b8a6" />
+    <!-- Theme color for iOS status bar - indigo always -->
+    <meta name="theme-color" content="#4f46e5" />
 
     <!-- Blocking theme script - prevents flash of wrong theme -->
     <script is:inline>
